load fonts with same protocol as page

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="/css/bootstrap-responsive.min.css"/>
     <link rel="stylesheet" href="/css/ehsm.css"/>
-    <link href="http://fonts.googleapis.com/css?family=Cabin+Sketch:bold" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Nunito" rel="stylesheet" type="text/css">
+    <link href="//fonts.googleapis.com/css?family=Cabin+Sketch:bold" rel="stylesheet" type="text/css">
+    <link href="//fonts.googleapis.com/css?family=Nunito" rel="stylesheet" type="text/css">
     <script type="text/javascript" src="https://bridge.paymill.com/"></script>
   </head>
   <body ng-controller="TicketsController">
