move paymill public key into configuration

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -24,5 +24,6 @@
   <script src="/js/angular-strap.js"></script>
   <script src="/js/angular-payments.js"></script>
   <script src="/js/moment-with-langs.min.js"></script>
+  <script src="/paymill-public-key.js"></script>
   <script src="/js/tickets.js"></script>
 </html>
