--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="ehsm">
+<html ng-app="tickets">
   <head>
     <meta charset="utf-8"/>
     <title>Buy EHSM ticket</title>
