Save changes before account deletion

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -15,8 +15,10 @@
     <center style="padding-top: 2em;">
       <img src="/img/logo_web.png">
     </center>
-    <h1>Buy a Ticket for {{config.conferenceName}}</h1>
-    <div class="well" ng-view></div>
+<!--    <h1>Buy a Ticket for {{config.conferenceName}}</h1>
+    <div class="well" ng-view></div> -->
+<h1>Online ticket sale is closed!<br/>You can buy your ticket
+  when you just show up at EHSM!</h1>
   </body>
   <script src="/js/angular.min.js"></script>
   <script src="/js/angular-resource.min.js"></script>
